<resources>
    <string name="app_name">Fruits</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="location">location</string>
    <string name="mail">Mail</string>
    <string name="tasks">Tasks</string>
    <string name="tips">Tips</string>
    <string name="about">About</string>
    <string name="gmail">FITYMIStudio@gmail.com</string>
    <string name="jason">Jason Zhang</string>
</resources>
