<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/friends"
              android:icon="@drawable/friends"
              android:title="@string/friends"/>
        <item android:id="@+id/location"
              android:icon="@drawable/location"
              android:title="@string/location"/>
        <item android:id="@+id/mail"
              android:icon="@drawable/mail"
              android:title="@string/mail"/>
        <item android:id="@+id/task_list"
              android:icon="@drawable/task_list"
              android:title="@string/tasks"/>
        <item android:id="@+id/tips"
              android:icon="@drawable/tips"
              android:title="@string/tips"/>
        <item android:id="@+id/about"
              android:icon="@drawable/about"
              android:title="@string/about"/>
    </group>
</menu>